Added a lot of functionalities and settings

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -25,6 +25,7 @@
   <extensions defaultExtensionNs="com.intellij">
     <!-- Add your extensions here -->
     <projectService id="ProjectService" serviceImplementation="ProjectService"/>
+    <projectService id="HTTPPostRequestService" serviceImplementation="HTTPPostRequestService"/>
 
     <projectConfigurable displayName="Metrics Calculator" instance="SettingsConfigurable"/>
 
